Slight change to styling of country tooltip. Fixed stuck tooltip on mouseout with a boolean

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1215,8 +1215,7 @@
 .country-tooltip {
   opacity: 0;
   position: absolute;
-  padding: 4px 6px 4px;
-  text-align: center;
+  padding: 6px 6px 2px;
   min-width: 30px;
   font-size: 11px;
   line-height: 13px;
